--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "framer-motion": "^10.3.0",
     "heroicons-react": "^1.4.1",
     "jquery": "^3.6.4",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
+    "mongodb": "^5.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
